--- a/action.yaml
+++ b/action.yaml
@@ -48,7 +48,7 @@ runs:
         fi
         $REGCTL image copy -v info ${{ inputs.source-repo }}/${{ inputs.image }} ${{ inputs.target-repo }}/${{ inputs.target-image || inputs.image }}
     - id: sync-ecr
-      if: ${{ contains(inputs.target-repo,"amazonaws.com.cn" }}
+      if: ${{ contains(inputs.target-repo,"amazonaws.com.cn") }}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
