--- a/action.yaml
+++ b/action.yaml
@@ -106,6 +106,8 @@ runs:
           }
       shell: bash
       run: |
+        cat policyfiles/cn-ecr-iam-policy.json
+        
         repo_part=(`echo ${{ inputs.image }} | sed 's/:.*//g'`)
         repo_name=${{ inputs.target-repo }}/$repo_part
 
@@ -116,9 +118,9 @@ runs:
             echo "creating repo"
             aws ecr create-repository --region cn-northwest-1 --repository-name ${repo_name}
             echo "setting ecr iam policy"
-            aws ecr set-repository-policy -region cn-northwest-1 --repository-name ${repo_name} --policy-text '${{ toJson(env.ecr_iam_policy) }}'
+            aws ecr set-repository-policy -region cn-northwest-1 --repository-name ${repo_name} --policy-text ${{ toJson(env.ecr_iam_policy) }}
             echo "setting ecr lifecycle policy"
-            aws ecr put-lifecycle-policy --region cn-northwest-1 --repository-name ${repo_name} --lifecycle-policy-text '${{ toJson(env.lifecyle_policy) }}'
+            aws ecr put-lifecycle-policy --region cn-northwest-1 --repository-name ${repo_name} --lifecycle-policy-text ${{ toJson(env.lifecyle_policy) }}
           else
             >&2 echo ${output}
           fi
