--- a/action.yaml
+++ b/action.yaml
@@ -110,6 +110,8 @@ runs:
         repo_part=$(echo ${{ inputs.image }} | sed 's/:.*//g')
         repo_name=${{ inputs.target-repo }}/$repo_part
         echo "$repo_name"
+        export AWS_ACCESS_KEY_ID=${{ inputs.target_user }}
+        export AWS_SECRET_ACCESS_KEY=${{ inputs.target_password }}
         output=$(aws ecr describe-repositories --region cn-northwest-1 --repository-names ${repo_name} 2>&1)
         echo "$output"
 #        if [ $? -ne 0 ]; then
