--- a/action.yaml
+++ b/action.yaml
@@ -112,6 +112,7 @@ runs:
         echo "$repo_name"
         export AWS_ACCESS_KEY_ID=${{ inputs.target_user }}
         export AWS_SECRET_ACCESS_KEY=${{ inputs.target_password }}
+        aws ecr describe-repositories --region cn-northwest-1 --repository-names ${repo_name}
         output=$(aws ecr describe-repositories --region cn-northwest-1 --repository-names ${repo_name} 2>&1)
         echo "$output"
 #        if [ $? -ne 0 ]; then
