--- a/action.yaml
+++ b/action.yaml
@@ -110,38 +110,43 @@ runs:
         repo_part=$(echo ${{ inputs.image }} | sed 's/:.*//g')
         repo_name=${{ inputs.target-repo }}/$repo_part
         echo "$repo_name"
-        aws configure set aws_access_key_id ${{ inputs.target_user }}
-        aws configure set aws_secret_access_key ${{ inputs.target_password }}
+#        aws configure set aws_access_key_id ${{ inputs.target_user }}
+#        aws configure set aws_secret_access_key ${{ inputs.target_password }}
         aws ecr describe-repositories --region cn-northwest-1 --repository-names ${repo_name}
         output=$(aws ecr describe-repositories --region cn-northwest-1 --repository-names ${repo_name} 2>&1)
         echo "$output"
         if [ $? -ne 0 ]; then
           if echo ${output} | grep -q RepositoryNotFoundException; then
             echo "creating repo"
+            aws ecr create-repository --region cn-northwest-1 --repository-name ${repo_name}
+            echo "setting ecr iam policy"
+            aws ecr set-repository-policy -region cn-northwest-1 --repository-name ${repo_name} --policy-text ${{ toJson(env.ecr_iam_policy) }}
+            echo "setting ecr lifecycle policy"
+            aws ecr put-lifecycle-policy --region cn-northwest-1 --repository-name ${repo_name} --lifecycle-policy-text ${{ toJson(env.lifecyle_policy) }}
           else
             >&2 echo ${output}
           fi
         fi
 
-#        if which regctl ; then
-#          REGCTL="$(which regctl)"
-#        else
-#          cat >regctl <<EOF
-#          #!/bin/sh
-#          opts=""
-#          case "\$*" in
-#            "registry login"*) opts="-t";;
-#          esac
-#          docker container run \$opts -i --rm --net host \\
-#            -u "\$(id -u):\$(id -g)" -e HOME -v \$HOME:\$HOME \\
-#            -v /etc/docker/certs.d:/etc/docker/certs.d:ro \\
-#            regclient/regctl:latest "\$@"
-#        EOF
-#            chmod 755 regctl
-#            REGCTL="$(pwd)/regctl"
-#        fi
-#        aws ecr get-login-password --region cn-northwest-1 | docker login --username AWS --password-stdin ${{ inputs.target-repo }}
-#        $REGCTL image copy -v info ${{ inputs.source-repo }}/${{ inputs.image }} ${{ inputs.target-repo }}/${{ inputs.target-image || inputs.image }}
-#        cat ./policyfiles/cn-ecr-iam-policy.json
+        if which regctl ; then
+          REGCTL="$(which regctl)"
+        else
+          cat >regctl <<EOF
+          #!/bin/sh
+          opts=""
+          case "\$*" in
+            "registry login"*) opts="-t";;
+          esac
+          docker container run \$opts -i --rm --net host \\
+            -u "\$(id -u):\$(id -g)" -e HOME -v \$HOME:\$HOME \\
+            -v /etc/docker/certs.d:/etc/docker/certs.d:ro \\
+            regclient/regctl:latest "\$@"
+        EOF
+            chmod 755 regctl
+            REGCTL="$(pwd)/regctl"
+        fi
+        aws ecr get-login-password --region cn-northwest-1 | docker login --username AWS --password-stdin ${{ inputs.target-repo }}
+        $REGCTL image copy -v info ${{ inputs.source-repo }}/${{ inputs.image }} ${{ inputs.target-repo }}/${{ inputs.target-image || inputs.image }}
+        cat ./policyfiles/cn-ecr-iam-policy.json
 
 
