--- a/action.yaml
+++ b/action.yaml
@@ -117,10 +117,10 @@ runs:
           aws ecr create-repository --region cn-northwest-1 --repository-name ${repo_name}
 
           echo "-----setting ecr iam policy-----"
-          aws ecr set-repository-policy --region cn-northwest-1 --repository-name ${repo_name} --policy-text ${{ toJson(env.ecr_iam_policy) }}
+          aws ecr set-repository-policy --region cn-northwest-1 --repository-name ${repo_name} --policy-text ${{ env.ecr_iam_policy }}
 
           echo "-----setting ecr lifecycle policy-----"
-          aws ecr put-lifecycle-policy --region cn-northwest-1 --repository-name ${repo_name} --lifecycle-policy-text ${{ toJson(env.lifecycle_policy) }}
+          aws ecr put-lifecycle-policy --region cn-northwest-1 --repository-name ${repo_name} --lifecycle-policy-text ${{ env.lifecycle_policy }}
 
         fi
 
