--- a/action.yaml
+++ b/action.yaml
@@ -117,9 +117,9 @@ runs:
           aws ecr create-repository --region cn-northwest-1 --repository-name ${repo_name}
 
           echo "-----setting ecr iam policy-----"
-        
-          echo ${{ env.ecr_iam_policy }} > ecr_iam_policy.json
-          echo ${{ env.lifecycle_policy }} > lifecycle_policy.json
+
+          echo '${{ env.ecr_iam_policy }}' > ecr_iam_policy.json
+          echo '${{ env.lifecycle_policy }}' > lifecycle_policy.json
 
           aws ecr set-repository-policy --region cn-northwest-1 --repository-name ${repo_name} --policy-text file://ecr_iam_policy.json
 
