--- a/action.yaml
+++ b/action.yaml
@@ -63,11 +63,9 @@ runs:
                 "Effect": "Allow",
                 "Principal": {
                   "AWS": [
-                    "arn:aws:iam::615254691163:role/ts_all_test_ci-it-slave_role",
-                    "arn:aws:iam::615254691163:role/ts_all_test_ci-components-slave_role",
-                    "arn:aws:iam::694518486591:role/ts_all_base_administrator_role",
-                    "arn:aws:iam::615254691163:role/ts_all_test_ts_github-actions-runner_role",
-                    "arn:aws-cn:iam::121118285438:role/ts_all_sand_administrator_role"
+                    "arn:aws-cn:iam::121118285438:role/ts_all_sand_administrator_role",
+                    "arn:aws-cn:iam::120867251111:role/ts_all_prod_administrator_role",
+                    "arn:aws-cn:iam::120867251111:role/ts_all_prod_ts_eks-node-groups_role"
                   ]
                 },
                 "Action": [
@@ -121,10 +119,10 @@ runs:
           echo '${{ env.ecr_iam_policy }}' > ecr_iam_policy.json
           echo '${{ env.lifecycle_policy }}' > lifecycle_policy.json
 
-          aws ecr set-repository-policy --region cn-northwest-1 --repository-name ${repo_name} --policy-text file://ecr_iam_policy.json
+          aws ecr set-repository-policy --region cn-northwest-1 --repository-name ${repo_name} --policy-text '${{ env.ecr_iam_policy }}'
 
           echo "-----setting ecr lifecycle policy-----"
-          aws ecr put-lifecycle-policy --region cn-northwest-1 --repository-name ${repo_name} --lifecycle-policy-text file://lifecycle_policy.json
+          aws ecr put-lifecycle-policy --region cn-northwest-1 --repository-name ${repo_name} --lifecycle-policy-text '${{ env.lifecycle_policy }}'
 
         fi
 
